--- a/Style/styleAgendamento.css
+++ b/Style/styleAgendamento.css
@@ -50,7 +50,7 @@
   margin-right: 10%;
   border: none;
 }
-#header {
+#header-servico {
   background-color: #0f0f0f;
   opacity: 95%;
   color: #ffffff;
