--- a/Style/styleGerenciamento.css
+++ b/Style/styleGerenciamento.css
@@ -1,4 +1,4 @@
-#Body{
+#Body {
   background-color: #f0f0f0;
 }
 /*## Nav ##*/
@@ -26,6 +26,13 @@
   margin-top: 5%;
   position: relative;
 }
+
+#logoutBtn {
+  height: 20%;
+  width: 20%;
+  margin-left: 115%;
+}
+
 #imgLavaJato {
   width: 40%;
   margin-left: 7%;
@@ -42,7 +49,7 @@
 }
 
 /*##  Pendentes  ##*/
-.container1{
+.container1 {
   width: 73%;
   height: 50%;
   overflow-y: scroll;
@@ -54,7 +61,7 @@
   border-color: #000000;
   margin-left: 25%;
 }
-.container2{
+.container2 {
   width: 73%;
   height: 50%;
   overflow-y: scroll;
@@ -66,12 +73,11 @@
   border-color: #000000;
   margin-left: 5%;
 }
-#TitleCard{
+#TitleCard {
   margin-left: 2%;
   color: #000;
-  
 }
-#CardTitle{
+#CardTitle {
   margin-top: 1%;
   margin-bottom: 3%;
 }
@@ -81,12 +87,12 @@
   width: 95%;
   position:fixed;
 }*/
-#CardPendentes{
+#CardPendentes {
   margin-top: 1%;
   margin-left: 2.5%;
   width: 95%;
 }
-#BtnCard{
+#BtnCard {
   margin-left: 75%;
   margin-top: -4%;
 }
@@ -102,28 +108,34 @@
 
 /*##  Progresso  ##*/
 @property --progress-value {
-  syntax: '<integer>';
+  syntax: "<integer>";
   inherits: false;
   initial-value: 0;
 }
 
 @keyframes html-progress {
-  to { --progress-value: 92; }
+  to {
+    --progress-value: 92;
+  }
 }
 
 @keyframes css-progress {
-  to { --progress-value: 87; }
+  to {
+    --progress-value: 87;
+  }
 }
 
 @keyframes js-progress {
-  to { --progress-value: 73; }
+  to {
+    --progress-value: 73;
+  }
 }
 
 .progress-bar {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  
+
   /* to center the percentage value */
   display: flex;
   justify-content: center;
@@ -132,12 +144,16 @@
 
 .progress-bar::before {
   counter-reset: percentage var(--progress-value);
-  content: counter(percentage) '%';
+  content: counter(percentage) "%";
 }
 
-.Bar{
-  background: 
-    radial-gradient(closest-side, white 79%, transparent 80% 100%, white 0),
+.Bar {
+  background: radial-gradient(
+      closest-side,
+      white 79%,
+      transparent 80% 100%,
+      white 0
+    ),
     conic-gradient(#0052bd calc(var(--progress-value) * 1%), #819cbe 0);
   animation: js-progress 2s 1 forwards;
   margin-left: 25%;
@@ -153,16 +169,16 @@ progress {
   width: 0;
   height: 0;
 }
-#CardProgresso{
-  width: 70%; 
+#CardProgresso {
+  width: 70%;
   height: 125%;
 }
-#ContainerProgresso{
+#ContainerProgresso {
   margin-left: 11.5%;
   margin-bottom: 5%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
-#label{
+#label {
   margin-left: 4%;
 }
 /*##  Progresso  ##*/
