--- a/Style/style.css
+++ b/Style/style.css
@@ -1,6 +1,5 @@
-#Nav {
-  background-color: #000000;
-}
+@import "styleGeral.css";
+
 /* #NavLink {
 } */
 #Link {
@@ -11,47 +10,22 @@
   padding-left: 55px;
 } */
 
-#imgLogo {
-  width: 20%;
-  margin-left: 2%;
-}
-#imgLogin {
-  width: 7%;
-  margin-left: 115%;
-}
-#Banner {
-  width: 100%;
-  margin: 0%;
-  position: absolute;
-}
-#Nome {
-  margin-left: 31%;
-  margin-top: 5%;
-  position: relative;
-}
-#imgLavaJato {
-  width: 40%;
-  margin-left: 7%;
-  border-radius: 2%;
-  position: absolute;
-}
 #Title1 {
   color: #000000;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   margin-left: 55%;
 }
 #Conteudo {
   margin-left: 55%;
   margin-top: 1%;
   font-size: 100%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 .Service {
   margin-top: 17%;
 }
 #Title2 {
   margin-left: 38%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   color: black;
 }
 #Col {
@@ -64,16 +38,13 @@
 #Btn-lavagemsimples {
   margin-left: 65%;
   background-color: #0052bd;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 #Btn {
   margin-left: 65%;
   background-color: #0052bd;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 #LinkCard {
   margin-left: 90%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 .Footer {
   background-color: #000000;
@@ -84,11 +55,10 @@
 #btnCard {
   margin-left: 80%;
   background-color: #0052bd;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 #Title3 {
   margin-left: 70%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   color: white;
 }
 #imgFooter {
@@ -96,39 +66,4 @@
   margin-top: -25%;
   margin-left: 5%;
   position: absolute;
-}
-.icon {
-  width: 5%;
-  margin-left: 11%;
-}
-#iconTel {
-  margin-top: -50%;
-}
-#iconEmail {
-  margin-top: 2%;
-}
-#iconInsta {
-  margin-top: 2.5%;
-}
-#icons {
-  margin-top: -1%;
-  margin-left: 7%;
-  position: absolute;
-}
-.textFooter {
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  margin-left: 15%;
-  color: #444444;
-}
-#textTel {
-  margin-top: -29.5%;
-  margin-left: 19%;
-}
-#textEmail {
-  margin-top: -5%;
-  margin-left: 19%;
-}
-#textInsta {
-  margin-top: -5%;
-  margin-left: 19%;
 }
