--- a/Style/styleAgendamento.css
+++ b/Style/styleAgendamento.css
@@ -1,3 +1,5 @@
+@import "styleGeral.css";
+
 .body {
   background-image: url(../Assets/ServiceBanner.png);
   background-size: 1366px 615px;
@@ -15,10 +17,6 @@
   width: 20%;
   margin-left: 2%;
 }
-#imgLogin {
-  width: 7%;
-  margin-left: 115%;
-}
 
 #logoutBtn {
   height: 20%;
@@ -28,7 +26,7 @@
 
 #Title1 {
   color: #ffffff;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   margin-left: 40%;
   margin-bottom: 3%;
 }
@@ -38,7 +36,6 @@
   margin-left: 10%;
   border-radius: 2%;
   margin-top: 0%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 #btn2 {
   margin-left: 70%;
@@ -53,7 +50,6 @@
   color: #ffffff;
 }
 #Form2 {
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   margin-right: 10%;
   border: none;
 }
