--- a/Style/styleGerenciamento.css
+++ b/Style/styleGerenciamento.css
@@ -1,3 +1,5 @@
+@import "styleGeral.css";
+
 #Body {
   background-color: #f0f0f0;
 }
@@ -12,20 +14,6 @@
   width: 20%;
   margin-left: 2%;
 }
-#imgLogin {
-  width: 7%;
-  margin-left: 115%;
-}
-#Banner {
-  width: 100%;
-  margin: 0%;
-  position: absolute;
-}
-#Nome {
-  margin-left: 31%;
-  margin-top: 5%;
-  position: relative;
-}
 
 #logoutBtn {
   height: 20%;
@@ -33,17 +21,11 @@
   margin-left: 115%;
 }
 
-#imgLavaJato {
-  width: 40%;
-  margin-left: 7%;
-  border-radius: 2%;
-  position: absolute;
-}
 /*## Nav ##*/
 
 #Title1 {
   color: #000000;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   margin-left: 33%;
   margin-top: 3%;
 }
@@ -54,7 +36,7 @@
   height: 50%;
   overflow-y: scroll;
   margin-top: 5%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   background-color: #ececec;
   border: double;
   border-width: 5%;
@@ -66,7 +48,7 @@
   height: 50%;
   overflow-y: scroll;
   margin-top: 5%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   background-color: #ececec;
   border: double;
   border-width: 5%;
@@ -100,7 +82,7 @@
 
 #Title2 {
   color: #000000;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+
   margin-left: 40%;
   margin-top: -13%;
   margin-bottom: 5%;
@@ -176,7 +158,6 @@ progress {
 #ContainerProgresso {
   margin-left: 11.5%;
   margin-bottom: 5%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 #label {
   margin-left: 4%;
