--- a/Style/styleGerenciamento.css
+++ b/Style/styleGerenciamento.css
@@ -1,4 +1,5 @@
 @import "styleGeral.css";
+@import url("https://cdn.materialdesignicons.com/5.1.45/css/materialdesignicons.min.css");
 
 #Body {
   background-color: #f0f0f0;
@@ -80,13 +81,6 @@
 }
 /*##  Pendentes  ##*/
 
-#Title2 {
-  color: #000000;
-
-  margin-left: 40%;
-  margin-top: -13%;
-  margin-bottom: 5%;
-}
 #CardProgresso {
   width: 70%;
   height: 125%;
@@ -102,20 +96,62 @@
 
 .Footer {
   background-color: #000000;
-  height: 60%;
-}
-#imgFooter {
-  width: 30%;
-  margin-top: 2%;
-  margin-left: 26%;
-  position: absolute;
+  display: flex;
+  justify-content: center;
 }
 
-.cadastro-section {
+.section-container {
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0;
+  align-items: center;
+}
+
+.inner-card {
+  border: 1px solid #0000001a;
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: #00000033 0px 0px 5px 0px inset;
+  height: 365px;
+  max-height: 365px;
+  background-color: #d9d9d9;
+}
+
+.inner-card-title {
   display: flex;
   align-items: center;
-  padding: 32px 0;
-  flex-direction: column;
+  justify-content: center;
+  border-radius: 5px;
+  border: 1px solid #00000050;
+  padding: 12px;
+  font-size: 1.2rem;
+  background-color: #fff;
+}
+
+.card-pendente {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 12px;
+  border-radius: 5px;
+  border: 1px solid #00000050;
+  margin-bottom: 6px;
+}
+
+.btn-excluir {
+  border: 1px solid red;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  background-color: rgb(244, 153, 153);
+}
+
+.btn-concluir {
+  border: 1px solid rgb(0, 255, 55);
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  background-color: rgb(184, 241, 191);
 }
 
 .progress-bar {
