--- a/Style/style.css
+++ b/Style/style.css
@@ -1,69 +1,10 @@
 @import "styleGeral.css";
 
-/* #NavLink {
-} */
-#Link {
-  color: white;
-}
-
-/* .navbar-brand-logout {
-  padding-left: 55px;
-} */
-
-#Title1 {
-  color: #000000;
-
-  margin-left: 55%;
-}
-#Conteudo {
-  margin-left: 55%;
-  margin-top: 1%;
-  font-size: 100%;
-}
-.Service {
-  margin-top: 17%;
-}
-#Title2 {
-  margin-left: 38%;
-
-  color: black;
-}
-#Col {
-  margin-left: 4%;
-}
-#card {
-  width: 20%;
-  margin-left: 0;
-}
-#Btn-lavagemsimples {
-  margin-left: 65%;
-  background-color: #0052bd;
-}
-#Btn {
-  margin-left: 65%;
-  background-color: #0052bd;
-}
-#LinkCard {
-  margin-left: 90%;
-}
-.Footer {
-  background-color: #000000;
-}
-#card-Footer {
-  margin-left: 60%;
-}
-#btnCard {
-  margin-left: 80%;
-  background-color: #0052bd;
-}
-#Title3 {
-  margin-left: 70%;
-
-  color: white;
-}
-#imgFooter {
-  width: 30%;
-  margin-top: -25%;
-  margin-left: 5%;
-  position: absolute;
+.banner-section {
+  height: 60vh;
+  background-image: url(../Assets/Banner2.png);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
