--- a/Style/styleAgendamento.css
+++ b/Style/styleAgendamento.css
@@ -2,7 +2,7 @@
 
 .body {
   background-image: url(../Assets/ServiceBanner.png);
-  background-size: 1366px 615px;
+  background-size: cover;
 }
 #Nav {
   background-color: #000000;
@@ -18,18 +18,6 @@
   margin-left: 2%;
 }
 
-#logoutBtn {
-  height: 20%;
-  width: 20%;
-  margin-left: 115%;
-}
-
-#Title1 {
-  color: #ffffff;
-
-  margin-left: 40%;
-  margin-bottom: 3%;
-}
 #Form {
   background-color: #0f0f0f;
   opacity: 95%;
