--- a/Style/styleGerenciamento.css
+++ b/Style/styleGerenciamento.css
@@ -1,104 +1,4 @@
 @import "styleGeral.css";
-@import url("https://cdn.materialdesignicons.com/5.1.45/css/materialdesignicons.min.css");
-
-#Body {
-  background-color: #f0f0f0;
-}
-/*## Nav ##*/
-#Nav {
-  background-color: #000000;
-}
-#Link {
-  color: white;
-}
-#imgLogo {
-  width: 20%;
-  margin-left: 2%;
-}
-
-#logoutBtn {
-  height: 20%;
-  width: 20%;
-  margin-left: 115%;
-}
-
-/*## Nav ##*/
-
-#Title1 {
-  color: #000000;
-
-  margin-left: 33%;
-  margin-top: 3%;
-}
-
-/*##  Pendentes  ##*/
-.container1 {
-  width: 73%;
-  height: 50%;
-  overflow-y: scroll;
-  margin-top: 5%;
-
-  background-color: #ececec;
-  border: double;
-  border-width: 5%;
-  border-color: #000000;
-  margin-left: 25%;
-}
-.container2 {
-  width: 73%;
-  height: 50%;
-  overflow-y: scroll;
-  margin-top: 5%;
-
-  background-color: #ececec;
-  border: double;
-  border-width: 5%;
-  border-color: #000000;
-  margin-left: 5%;
-}
-#TitleCard {
-  margin-left: 2%;
-  color: #000;
-}
-#CardTitle {
-  margin-top: 1%;
-  margin-bottom: 3%;
-}
-/*#CardPendentes1{
-  margin-top: 3%;
-  margin-left: 2.5%;
-  width: 95%;
-  position:fixed;
-}*/
-#CardPendentes {
-  margin-top: 1%;
-  margin-left: 2.5%;
-  width: 95%;
-}
-#BtnCard {
-  margin-left: 75%;
-  margin-top: -4%;
-}
-/*##  Pendentes  ##*/
-
-#CardProgresso {
-  width: 70%;
-  height: 125%;
-}
-#ContainerProgresso {
-  margin-left: 11.5%;
-  margin-bottom: 5%;
-}
-#label {
-  margin-left: 4%;
-}
-/*##  Progresso  ##*/
-
-.Footer {
-  background-color: #000000;
-  display: flex;
-  justify-content: center;
-}
 
 .section-container {
   display: flex;
@@ -139,82 +39,28 @@
   margin-bottom: 6px;
 }
 
-.btn-excluir {
-  border: 1px solid red;
-  width: 30px;
-  height: 30px;
-  border-radius: 5px;
-  background-color: rgb(244, 153, 153);
-}
-
 .btn-concluir {
   border: 1px solid rgb(0, 255, 55);
   width: 30px;
   height: 30px;
   border-radius: 5px;
   background-color: rgb(184, 241, 191);
-}
-
-.progress-bar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-
-  /* to center the percentage value */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.progress-bar::before {
-  counter-reset: percentage var(--progress-value);
-  content: counter(percentage) "%";
+.btn-excluir {
+  border: 1px solid red;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  background-color: rgb(244, 153, 153);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.Bar {
-  background: radial-gradient(
-      closest-side,
-      white 79%,
-      transparent 80% 100%,
-      white 0
-    ),
-    conic-gradient(#0052bd calc(var(--progress-value) * 1%), #819cbe 0);
-  animation: js-progress 2s 1 forwards;
-  margin-left: 25%;
-  margin-top: 15%;
-}
-
-.Bar::before {
-  animation: html-progress 2s 1 forwards;
-}
-
-progress {
-  visibility: hidden;
-  width: 0;
-  height: 0;
-}
-
-/*##  Progresso  ##*/
-@property --progress-value {
-  syntax: "<integer>";
-  inherits: false;
-  initial-value: 0;
-}
-
-@keyframes html-progress {
-  to {
-    --progress-value: 92;
-  }
-}
-
-@keyframes css-progress {
-  to {
-    --progress-value: 87;
-  }
-}
-
-@keyframes js-progress {
-  to {
-    --progress-value: 73;
-  }
+.service-name {
+  font-size: 0.8rem;
 }
