--- a/Style/styleLogin.css
+++ b/Style/styleLogin.css
@@ -2,50 +2,22 @@
 
 .body {
   background-image: url(../Assets/ServiceBanner.png);
-  background-size: 1366px 615px;
-}
-#Nav {
-  background-color: #000000;
-}
-#NavLink {
-  margin-left: 4%;
-}
-#Link {
-  color: white;
-}
-#imgLogo {
-  width: 20%;
-  margin-left: 2%;
-}
-#card {
-  width: 40%;
-  margin-left: 30%;
-  margin-top: 5%;
-}
-#imgLogin2 {
-  width: 12%;
-  margin-left: 45%;
-  margin-bottom: 5%;
-}
-#btnLogin {
-  margin-left: 85%;
+  background-size: cover;
+  height: 100vh;
 }
 #linkLogin {
   margin-left: 15%;
   margin-top: 2%;
 }
-#Form {
+.form-card {
   background-color: #0f0f0f;
   opacity: 95%;
-  width: 25%;
-  margin-left: 37%;
-  border-radius: 2%;
-  margin-top: 5%;
+
+  border-radius: 25px;
+  padding: 25px;
+  color: white;
 }
 #btn2 {
-  margin-left: 70%;
-  margin-top: -18%;
-  margin-bottom: 3%;
   background-color: #0052bd;
   color: #ffffff;
 }
