--- a/Style/styleService.css
+++ b/Style/styleService.css
@@ -1,55 +1,14 @@
 @import "styleGeral.css";
 
-#Nav {
-  background-color: #000000;
+.banner-section {
+  height: 60vh;
+  background-image: url(../Assets/ServiceBanner.png);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#NavLink {
-  margin-left: 4%;
-}
-#Link {
-  color: white;
-}
-#imgLogo {
-  width: 20%;
-  margin-left: 2%;
-}
-#Nome {
-  margin-left: 32%;
-  margin-top: 0%;
-  position: relative;
-}
-#Title2 {
-  margin-left: 46%;
 
-  color: black;
-  margin-top: 5%;
-}
-#card {
-  width: 20%;
-  margin-left: 0;
-}
-#Btn {
-  margin-left: 65%;
-  background-color: #0052bd;
-}
-.Footer {
-  background-color: #000000;
-}
-#card-Footer {
-  margin-left: 60%;
-}
-#btnCard {
-  margin-left: 80%;
-  background-color: #0052bd;
-}
-#Title3 {
-  margin-left: 70%;
-
-  color: white;
-}
-#imgFooter {
-  width: 30%;
-  margin-top: -25%;
-  margin-left: 5%;
-  position: absolute;
+.services-section {
+  margin: 60px 0;
 }
